Updated jekyll and pushed the game

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Test test
+<!doctype html>
+<html lang=en-us>
+
+    <head>
+        <meta charset=utf-8>
+        <meta content="text/html; charset=utf-8" http-equiv=Content-Type>
+    </head>
+
+
+    <h1> <a href="Lab12.html">Click to play the game</a> </h1>
